Added support for activating hip and foot trackers based on the config

--- a/Assets/StreamingAssets/config.json
+++ b/Assets/StreamingAssets/config.json
@@ -2,4 +2,6 @@
 	"url": "localhost",
 	"port": 7777,
 	"rpmURL": "https://d1a370nemizbjq.cloudfront.net/209a1bc2-efed-46c5-9dfd-edc8a1d9cbe4.glb"
+	"activateHipTracker" : false,
+	"activateFootTrackers" : false
 }
