Updated VRScene to support debug visualization of trackers

--- a/Assets/StreamingAssets/config.json
+++ b/Assets/StreamingAssets/config.json
@@ -6,5 +6,6 @@
 	"activateFootTrackers" : true,
 	"hipTracker" : {"deviceID": 6, "posOffset": [0,0,0], "rotOffset": [0,0,0]},
 	"leftFootTracker" : {"deviceID": 7, "posOffset": [0,0,0], "rotOffset": [230,180,0]},
-	"rightFootTracker" : {"deviceID": 8, "posOffset": [0,0,0], "rotOffset": [230,180,0]}
+	"rightFootTracker" : {"deviceID": 8, "posOffset": [0,0,0], "rotOffset": [230,180,0]},
+	"activateDebugVis": true
 }
