--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/NetworkAvatar"]
 	path = Assets/NetworkAvatar
 	url = git@github.com:CarouselDancing/network-avatar.git
+[submodule "Assets/FigureGenerator"]
+	path = Assets/FigureGenerator
+	url = git@github.com:CarouselDancing/figure-generator.git
