--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,25 +3,21 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.7.5",
-    "com.unity.analytics": "3.6.11",
-    "com.unity.animation.rigging": "1.0.3",
-    "com.unity.burst": "1.6.0-pre.4",
-    "com.unity.collab-proxy": "1.11.2",
-    "com.unity.ide.rider": "3.0.7",
-    "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
-    "com.unity.multiplayer-hlapi": "1.0.6",
-    "com.unity.purchasing": "4.0.3",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.analytics": "3.6.12",
+    "com.unity.animation.rigging": "1.1.1",
+    "com.unity.burst": "1.6.5",
+    "com.unity.collab-proxy": "1.15.17",
+    "com.unity.ide.rider": "3.0.14",
+    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.purchasing": "4.1.4",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.5.6",
+    "com.unity.timeline": "1.6.4",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.interaction.toolkit": "2.0.0-pre.5",
-    "com.unity.xr.management": "4.2.0",
-    "com.unity.xr.mock-hmd": "1.3.0-preview.1",
-    "com.unity.xr.oculus": "1.10.0",
-    "com.unity.xr.openxr": "1.2.8",
+    "com.unity.xr.interaction.toolkit": "2.1.0-pre.1",
+    "com.unity.xr.openxr": "1.4.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
