--- a/Assets/Resources/config.json
+++ b/Assets/Resources/config.json
@@ -8,5 +8,5 @@
 	"leftFootTracker" : {"deviceID": 7, "posOffset": [0,0,0], "rotOffset": [230,180,0]},
 	"rightFootTracker" : {"deviceID": 8, "posOffset": [0,0,0], "rotOffset": [231,180,0]},
 	"activateDebugVis": false,
-	"networkMode": "client"
+	"networkMode": "host"
 }
