--- a/Assets/Resources/config.json
+++ b/Assets/Resources/config.json
@@ -9,6 +9,8 @@
 	"hipTracker" : {"posOffset": [0,0,-0.1], "rotOffset": [0,0,0]},
 	"leftFootTracker" : {"posOffset": [0,0,-0.05], "rotOffset": [230,180,0]},
 	"rightFootTracker" : {"posOffset": [0,0,-0.05], "rotOffset": [231,180,0]},
+	"leftControllerTracker" : {"posOffset": [-0.05,-0.07, -0.029], "rotOffset": [0,0,0]},
+	"rightControllerTracker" : {"posOffset": [0.05,-0.07,-0.029], "rotOffset": [0,0,0]},
 	"activateDebugVis": false,
 	"networkMode": "host",
 	"protocol": "kcp"
